tracked on remote service HRT data. fixed TizenOS permission ajax call. timestap valorized server side

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Tizen Wearable Web IDE - Tizen Wearable - Tizen Wearable basic Application</title>
 
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<script src="js/repository.js"></script>
 	<script src="js/sensors.js"></script>
 	<script src="js/bootstrapper.js"></script>
 	<script src="js/securityContext.js"></script>
